avoiding horizontal scroll

--- a/css/index.css
+++ b/css/index.css
@@ -173,7 +173,7 @@ h2 {
   width: 74rem;
   background-repeat: no-repeat;
   bottom: 0;
-  right: -6.5em;
+  right: -6.2em;
 }
 
 .work-experience__left::after {
